@@ -1,5 +1,10 @@
 2002-09-24  Keisuke Nishida  <knishida@netlab.jp>
 
+	* tree.h (cobc_parameter): Renamed from cobc_generic.
+	All files updated.
+
+2002-09-24  Keisuke Nishida  <knishida@netlab.jp>
+
 	* inline.c (output_call_statement): Output the pointer to the
 	content length for COBC_CALL_BY_LENGTH.
 
